fixed sources image too large on mobile better

--- a/src/components/Data/DataSource.css
+++ b/src/components/Data/DataSource.css
@@ -41,7 +41,7 @@
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    max-width: 95%;
+    max-width: 100%;
     height: auto;
     padding: 5%;
     margin-left: auto;
